<resources>
    <string name="app_name">InClass09</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="choosepwd">Choose Password</string>
    <string name="repeatpwd">Repeat Password</string>
    <string name="sendToLabel">Send To :</string>
    <string name="sendEmailLable">Send Email</string>
</resources>
